log
Thu 28 Sep 2023 06:44:34 PM UTC: 
 tests:  0|4
total_score: 0/70
6b79366
Thu 28 Sep 2023 06:50:48 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   42 |     heap->capacity = 3;  // Capacidad inicial de 3 casillas
      |           ^~~~~~~~
      |           capac
heap.c:44:66: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   44 |     heap->heapArray = (heapElem*)malloc(sizeof(heapElem) * heap->capacity);
      |                                                                  ^~~~~~~~
      |                                                                  capac
Compilation failed
44cc6ec
Thu 28 Sep 2023 06:51:06 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:44:66: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   44 |     heap->heapArray = (heapElem*)malloc(sizeof(heapElem) * heap->capacity);
      |                                                                  ^~~~~~~~
      |                                                                  capac
Compilation failed
4c4d5c4
Thu 28 Sep 2023 06:51:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
236923c
Thu 28 Sep 2023 06:52:10 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
9e652bd
Thu 28 Sep 2023 06:56:36 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2153f4f
Thu 28 Sep 2023 06:57:09 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
617ca0c
Thu 28 Sep 2023 07:06:52 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d5b7ccb
Thu 28 Sep 2023 07:07:28 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|2
total_score: 25/70
58ab053
Thu 28 Sep 2023 07:11:52 PM UTC: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|2
total_score: 20/70
b8bb689
Thu 28 Sep 2023 07:12:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a9f1268
